css/main.css
@-moz-viewport { width: device-width; scale: 1; }
@-ms-viewport { width: device-width; scale: 1; }
@-o-viewport { width: device-width; scale: 1; }
@-webkit-viewport { width: device-width; scale: 1; }
@viewport { width: device-width; scale: 1; }

html {
  margin: 0;
  padding: 0;
  box-sizing: border-box;

  font: normal 100%/1.5 sans-serif;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
}

@media only screen and (min-width: 60em) {

    html {
        font-size: 110%;
    }
}
    
@media only screen and (min-width: 90em) {

    html {
        font-size: 120%;
    }
}
    
@media only screen and (min-width: 120em) {
    
    html {
        font-size: 130%;
    }
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
    margin: 0;
    padding: 0;
}

img {
    display: block;
    width: 100%;
}

.masthead {
    overflow: hidden;
    background-color: white;
}

.logo {
    margin: 1rem auto 1rem;
    text-align: center;
    width: 11em;
}

.nav {
    padding: 0;
}

.nav li {
    display: block;
}

.nav a,
.nav a:link,
.nav a:visited {
    display: block;

    color: #3E9E84;
    text-decoration: none;
}

.nav a:hover,
.nav a:focus,
.nav a:active {
    background-color: #3E9E84;

    color: #fff;
}

.billboard {
    padding: 7rem;
    text-align: left;
}

.xssnav {
    text-align: center;
    padding: 1em 1em 0 1em;
}

.startnow {
    text-decoration: none;
    font-size: 2rem;
    color: #3E9E84;
    padding: 0.25em 0.5em;
    background-color: #fff;
    border: 5px solid #3E9E84;
    text-decoration: none;
}

.startnow:hover {
    color: white;
    background-color: #3E9E84;
}

.intro {
    text-align: center;
}

.centertext {
    text-align: center;
}

.tan {
    background-color: #F0DCB3;
}

.feature {
    overflow: hidden;
}

.bullet {
    width: 4em;
    float: left;
    margin: 1em;
}

.feature-text {
    float: right;
    width: calc(100% - 6em);
    margin-top: 1.5em;
}

.screenshot {
    height: 100%;
}

button {
    font-size: 1em;
    font-family: sans-serif;
    border: 4px solid white;
    background-color: #3E9E84;
    color: #fff;
    padding: 0.5em 1.5em;
    cursor: pointer;
}

button:hover {
    border-color: #3E9E84;
    background-color: white;
    color: #3E9E84;
}

button:active {
    box-shadow: 1px 1px 50px black;
}

@media only screen and (min-width: 20em) {

    .nav {
      text-align: center;
  }

    .nav li {
      display: block;
  }

    .bucket {
     width: 100%;
    margin: auto;
    padding: 1em;
}
        

}

@media only screen and (min-width: 40em) {

    .logo {
        float: left;
  }

    .nav {
        float: right;
  }

    .nav li {
      display: inline-block;
  }
    
    .top {
    margin-top: 4em;
}
    
    
}

@media only screen and (min-width: 60em) {

}

